--- a/harmoneats/app/src/main/res/layout/activity_login.xml
+++ b/harmoneats/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
 
 
     <EditText
-        android:id="@+id/pass1"
+        android:id="@+id/pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -94,7 +94,7 @@
         app:layout_constraintVertical_bias="0.26" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/gregister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New here ? Create an Account"
