--- a/harmoneats/app/src/main/res/layout/activity_register.xml
+++ b/harmoneats/app/src/main/res/layout/activity_register.xml
@@ -152,7 +152,7 @@
         app:layout_constraintVertical_bias="0.385" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
@@ -163,7 +163,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pass2" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/glogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have account? Login Here"
