--- a/harmoneats/app/src/main/res/layout/activity_login.xml
+++ b/harmoneats/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
-        android:text="Sign Up"
+        android:text="Sign In"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
