--- a/harmoneats/app/src/main/res/layout/activity_foodgenres_page_1.xml
+++ b/harmoneats/app/src/main/res/layout/activity_foodgenres_page_1.xml
@@ -60,6 +60,19 @@
         android:layout_marginTop="50dp"
         android:text="Next"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bbqButton" />
+
+    <Button
+        android:id="@+id/mainFromGenreButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
+        android:text="Main"
+        app:layout_constraintEnd_toStartOf="@+id/nextButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bbqButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
