--- a/harmoneats/app/src/main/res/layout/activity_login.xml
+++ b/harmoneats/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/restaurantName"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
         android:text="Sign In"
