recyclerView with menu items added, no functionality with ordering yet

--- a/harmoneats/app/src/main/res/layout/activity_search.xml
+++ b/harmoneats/app/src/main/res/layout/activity_search.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:hint="Search"
         app:layout_constraintEnd_toEndOf="@+id/searchView"
         app:layout_constraintStart_toStartOf="@+id/searchView"
         app:layout_constraintTop_toTopOf="parent" />
