--- a/harmoneats/app/src/main/res/layout/activity_restaurant.xml
+++ b/harmoneats/app/src/main/res/layout/activity_restaurant.xml
@@ -40,4 +40,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/menuView"
+        android:layout_width="380dp"
+        android:layout_height="530dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="@+id/restaurantDescription"
+        app:layout_constraintTop_toBottomOf="@+id/restaurantDescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
