--- a/harmoneats/app/src/main/res/layout/activity_main.xml
+++ b/harmoneats/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/driverButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Driver"
+        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/genresButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
