--- a/harmoneats/app/src/main/res/layout/activity_register.xml
+++ b/harmoneats/app/src/main/res/layout/activity_register.xml
@@ -65,7 +65,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/restaurantName"
+        android:id="@+id/itemName"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
         android:text="Create Account"
