--- a/harmoneats/app/src/main/res/layout/fragment_restaurant_page.xml
+++ b/harmoneats/app/src/main/res/layout/fragment_restaurant_page.xml
@@ -8,7 +8,7 @@
     tools:context=".RestaurantPage">
 
     <TextView
-    android:id="@+id/restaurantName"
+    android:id="@+id/itemName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -29,8 +29,8 @@
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/restaurantName"
-        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />
+        app:layout_constraintStart_toStartOf="@+id/itemName"
+        app:layout_constraintTop_toBottomOf="@+id/itemName" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/menuView"
