--- a/harmoneats/app/src/main/res/layout/fragment_search.xml
+++ b/harmoneats/app/src/main/res/layout/fragment_search.xml
@@ -8,7 +8,7 @@
     tools:context=".Search">
 
     <EditText
-        android:id="@+id/searchBar"
+        android:id="@+id/special_requests"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -25,7 +25,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/searchBar"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+        app:layout_constraintStart_toStartOf="@id/special_requests"
+        app:layout_constraintTop_toBottomOf="@+id/special_requests" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
