--- a/harmoneats/app/src/main/res/layout/fragment_add_to_order.xml
+++ b/harmoneats/app/src/main/res/layout/fragment_add_to_order.xml
@@ -81,9 +81,9 @@
         android:clickable="true"
         android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="@+id/item_count"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/item_count"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="254dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
