--- a/harmoneats/app/src/main/res/layout/fragment_order.xml
+++ b/harmoneats/app/src/main/res/layout/fragment_order.xml
@@ -29,13 +29,13 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/complete_order"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/your_order" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/complete_order"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
