--- a/harmoneats/app/src/main/res/layout/activity_login.xml
+++ b/harmoneats/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,22 @@
 
 
     <TextView
+        android:id="@+id/forgotPasswordTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="222dp"
+        android:clickable="true"
+        android:text="Forgot your password?"
+        android:textColor="#958B3A"
+        app:layout_constraintBottom_toTopOf="@+id/login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gregister" />
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="106dp"
         android:layout_height="31dp"
