Changed the account fragment to simply access the ResetPassword class instead of doing the same job in a different place.

--- a/harmoneats/app/src/main/res/layout/activity_reset_password.xml
+++ b/harmoneats/app/src/main/res/layout/activity_reset_password.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Enter your email below to send a reset link."
+        android:text="Enter your email below."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,13 +28,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resetTitleTextView" />
 
-    <Button
-        android:id="@+id/resetConfirmButton"
+    <TextView
+        android:id="@+id/resetConfirmTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:text="Send my reset link"
+        android:layout_marginTop="150dp"
+        android:text="Send me a reset link"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resetEmailEditText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
